# docs/swagger.json
@@ -15,13 +15,108 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/v1/users": {
+        "/api/v1/artisans": {
             "get": {
                 "description": "Show all users in the database",
+                "tags": [
+                    "Artisan"
+                ],
                 "summary": "Show all users",
                 "responses": {}
             },
             "post": {
+                "tags": [
+                    "Artisan"
+                ],
+                "parameters": [
+                    {
+                        "description": "Account Info",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Artisan"
+                        }
+                    }
+                ],
+                "responses": {}
+            },
+            "delete": {
+                "tags": [
+                    "Artisan"
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/artisans/{id}": {
+            "get": {
+                "tags": [
+                    "Artisan"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Account ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            },
+            "delete": {
+                "tags": [
+                    "Artisan"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Account ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            },
+            "patch": {
+                "tags": [
+                    "Artisan"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Account ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Account Info",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Artisan"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/users": {
+            "get": {
+                "description": "Show all users in the database",
+                "tags": [
+                    "User"
+                ],
+                "summary": "Show all users",
+                "responses": {}
+            },
+            "post": {
+                "tags": [
+                    "User"
+                ],
                 "parameters": [
                     {
                         "description": "Account Info",
@@ -36,11 +131,17 @@
                 "responses": {}
             },
             "delete": {
+                "tags": [
+                    "User"
+                ],
                 "responses": {}
             }
         },
         "/api/v1/users/{id}": {
             "get": {
+                "tags": [
+                    "User"
+                ],
                 "parameters": [
                     {
                         "type": "string",
@@ -53,6 +154,9 @@
                 "responses": {}
             },
             "delete": {
+                "tags": [
+                    "User"
+                ],
                 "parameters": [
                     {
                         "type": "string",
@@ -65,6 +169,9 @@
                 "responses": {}
             },
             "patch": {
+                "tags": [
+                    "User"
+                ],
                 "parameters": [
                     {
                         "type": "string",
@@ -88,6 +195,26 @@
         }
     },
     "definitions": {
+        "models.Artisan": {
+            "type": "object",
+            "properties": {
+                "clusterID": {
+                    "type": "string"
+                },
+                "firstname": {
+                    "type": "string"
+                },
+                "lastname": {
+                    "type": "string"
+                },
+                "picFormat": {
+                    "type": "string"
+                },
+                "tel": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
@@ -98,9 +225,6 @@
                     "type": "integer"
                 },
                 "bio": {
-                    "type": "string"
-                },
-                "desc": {
                     "type": "string"
                 },
                 "email": {
@@ -115,7 +239,7 @@
                 "password": {
                     "type": "string"
                 },
-                "pic_format": {
+                "picFormat": {
                     "type": "string"
                 },
                 "tel": {
